#   Copyright (c) 2024, Anton Gorshkov
#   All rights reserved.
#
#   This code is for a wallet and its unit tests.
#   For any questions or concerns, please contact Anton Gorshkov at antoniooreany@gmail.com

class Wallet:
    def __init__(self):
        self.public_key = ''
        self.private_key = ''

    def generate_keys(self):
        # Placeholder for key generation logic
        pass

    def create_transaction(self, recipient, amount):
        # Placeholder for transaction creation logic
        pass

    def get_balance(self, blockchain):
        # Placeholder for balance calculation
        pass
